Stop browser styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,20 @@ h2 {
   margin-top: 0.8rem;
 }
 
+button {
+  color: rgb(51, 51, 51);
+  -webkit-appearance: none; /* Remove default mobile browser styling (iOS and Android) */
+  -moz-appearance: none; /* Remove default mobile browser styling for Firefox */
+  appearance: none; /* Ensure the appearance is consistent across all browsers */
+}
+
 .circle-button {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   margin: 20px;
   border-radius: 50%;
   background-color: #4caf4f59;
-  font-size: 18px;
+  font-size: 2.3rem;
   font-weight: bold;
   border: 3px solid #4caf50;
   cursor: pointer;
@@ -65,6 +72,7 @@ h2 {
 
 .reset-button {
   padding: 5px 10px;
+  margin-top: 5px;
   font-size: 0.6rem;
   background-color: #f44336;
   color: white;
